# rust_api_clean_code_template

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/adapters/: create_certified_information_controller.rs  http_presenter.rs  mod.rs
src/adapters/ports/: traits.rs
src/domain/: certified_information.rs  mod.rs
src/infrastructure/: api.rs  certified_information_apis.rs  http_server.rs  mod.rs  ping_api.rs  ping_apis.rs
src/usecases/: create_certified_information.rs  mod.rs
src/usecases/ports/: mod.rs  response.rs  traits.rs
tests/domain/: mod.rs  test_certified_information.rs
tests/unit/: mod.rs
tests/unit/adapters/: mod.rs  test_create_certified_information_controller.rs
tests/unit/domain/: test_certified_information.rs
tests/unit/usecases/: mod.rs  test_create_certified_information.rs
tests/usecases/: test_create_certified_information.rs
