[package]
name = "rust_clean_code_api"
version = "0.1.0"
authors = ["GROARK"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_clean_code_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.31"
mockall = "0.13.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.24"
strum_macros = "0.24"
